# variant-viewer

./: .gitignore  AWS_DEPLOYMENT_PLAN.md  CLAUDE.md  DATA_BOUNDARIES.md  DESIGN.md  README.md  SCHEMA.md  WORKER_LAMBDA_PLAN.md  attribution.py  build.py  cli.py  clinvar_submissions.py  config.js.example  constants.py  db.py  dev.sh  display.py  genomics-app-architecture.md  head_descriptions.json  head_quality.json  head_vocab.json  heads.json  index.html  loaders.py  output.csv  package.json  paths.py  preflight.sh  prompts.py  pyproject.toml  serve.py  streaming.py  test.txt  training.py  transform.py
eeve-analysis-bak/sql/: phase2_neighbor_pipeline.sql
eeve-analysis/scripts/: plot_umap_gene_families.py  reproducibility.py  run_chronos_entry_analysis.py  run_corum_analysis.py  run_corum_retrieval.py  run_corum_vs_k.py  run_gene_family_analysis.py  run_neighbor_depmap_analysis.py  run_string_retrieval.py
evee-analysis/: ANALYSIS_WALKTHROUGH.md  FINDINGS_SUMMARY.md  New_ANALYSIS_WALKTHROUGH.md  New_FINDINGS_SUMMARY.md  PRESENTER_SCRIPT.md  SECOND_OPINION_AUDIT.md  SECOND_OPINION_CHANGES.md
evee-analysis-bak/scripts/: export_analysis_datasets.py  phase3_feature_groups.py  phase3_neighbor_random_analysis.py  run_phase2.py
evee-analysis/scripts/: inspect_db.py  make_presentation_figures.py  plot_fig7b_absolute_counts.py  plot_umap_gene_families.py  run_chronos_entry_analysis.py  run_corum_forward_prediction.py  run_corum_full.py  run_corum_interpretability.py  run_corum_retrieval.py  run_corum_vs_chronos_features.py  run_followup_analyses.py  run_followup_dataset_comparison.py  run_gene_family_analysis.py  run_left_right_analysis.py  run_neighbor_chronos_analysis.py  run_neighbor_depmap_analysis.py  run_quick_analyses.py  run_string_analysis.py  run_string_retrieval.py  verify_determinism.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  vite-env.d.ts
frontend/src/components/: DisruptionRow.svelte  EffectRow.svelte  HeadHeatmap.svelte  HeadHistogram.svelte  Header.svelte  HelpCard.svelte  LandingPage.svelte  PathogenicityLegend.svelte  ScoreHistogram.svelte  ScoreLegend.svelte  ScoreRow.svelte  Swatch.svelte  UmapCanvas.svelte  VariantPage.svelte
frontend/src/lib/: api.ts  colors.ts  helpers.ts  locusTrackModel.ts  stores.ts  types.ts  ucscHg38ContextUrl.ts
lambdas/api/: handler.py  requirements.txt
lambdas/worker/: handler.py
pipeline/: build_token_labels.py  eval.py  extract.py  extract.sh  extract_token.py  extract_token.sh  extract_token_windows.py  extract_token_windows.sh  finalize.sh  generate_descriptions.py  interpret.py  pipeline.sh  ref_labels.py  serve.sh  train.py  train.sh  train_next.py  train_token.py  train_token.sh
probe/: binning.py  covariance.py  multihead_v2.py  multihead_v8.py
scripts/: deploy.sh  ingest.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/api_gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudfront/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  (+1 more)
tests/: test_build_smoke.py  test_prompts.py
(+21 files in other folders)
