[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "variant-viewer"
version = "0.1.0"
description = "Interactive variant effect viewer for Evo2 ClinVar probes"
requires-python = ">=3.12"

dependencies = [
    "polars~=1.36",
    "torch>=2.6,<2.8",
    "orjson",
    "numpy",
    "scikit-learn>=1.8",
    "umap-learn",
    "loguru>=0.7",
    "tqdm>=4.66",
    "goodfire-core>=0.3.0",
    "obonet>=1.1.1",
]

[project.optional-dependencies]
interpret = ["anthropic"]
serve = ["starlette>=0.45", "uvicorn[standard]", "anthropic"]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 120

[tool.uv.sources]
goodfire-core = { path = "../goodfire-core", editable = true }
