[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "variant-viewer"
version = "0.1.0"
description = "Interactive variant effect viewer for Evo2 ClinVar probes"
requires-python = ">=3.12"

dependencies = [
    "polars~=1.36",
    "torch>=2.6,<2.8",
    "orjson",
    "numpy",
    "scikit-learn>=1.8",
    "umap-learn",
    "loguru>=0.7",
    "rich>=13",
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "goodfire-core>=0.3.0",
    "scipy>=1.14",
]

[project.scripts]
vv = "cli:app"

[dependency-groups]
dev = ["pytest>=9.0"]

[project.optional-dependencies]
interpret = ["anthropic"]
serve = ["starlette>=0.45", "uvicorn[standard]", "anthropic"]

[tool.setuptools]
packages = ["probe"]
py-modules = ["cli", "build", "serve", "constants", "display", "paths", "prompts", "attribution"]

[tool.ruff]
line-length = 120

[tool.uv.sources]
goodfire-core = { path = "../goodfire-core", editable = true }
